--- a/playbooks/fabric.yml
+++ b/playbooks/fabric.yml
@@ -10,8 +10,8 @@
     tags: [ consul ]
   - role: node-exporter
     tags: [ node-exporter ]
-  - role: swap
-    tags: [ swap ]
+  - role: cloud-init
+    tags: [ cloud-init ]
   - role: promtail
     tags: [ promtail ]
   - role: restic
