add packer script for arch install

--- a/playbooks/archlinux-install-playbook.yml
+++ b/playbooks/archlinux-install-playbook.yml
@@ -17,5 +17,6 @@
     ansible_connection: ssh
     ansible_user: "root"
     ansible_ssh_pass: "{{ password }}"
+    bootloader: "uefi"
   vars_files:
     - ./vars/archlinux-install.yml
