--- a/roles/archlinux-install/tasks/main.yml
+++ b/roles/archlinux-install/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 - name: Check device name {{ install_device_name }} exists
   stat: "path={{ install_device_name }}"
-  register: device
   delegate_to: "{{ target_ip }}"
+  register: device
   failed_when: not device.stat.exists
 
 - name: Check if partitions are mounted
@@ -18,14 +18,46 @@
         root_mounted: "{{ root_mountpoint.rc == 0 }}"
         boot_mounted: "{{ boot_mountpoint.rc == 0 }}"
 
-- name: Label {{ install_device_name }} as mbr
+- name: set root partition for bios
+  delegate_to: "{{ target_ip }}"
+  when: bootloader == "bios"
+  set_fact:
+    root_partition_number: "1"
+
+- name: set root partition for uefi
+  delegate_to: "{{ target_ip }}"
+  when: bootloader != "bios"
+  set_fact:
+    root_partition_number: "2"
+
+- name: Label {{ install_device_name }} as gpt
+  when: not root_mounted and bootloader != "bios"
   delegate_to: "{{ target_ip }}"
   community.general.parted:
       device: "{{ install_device_name }}"
       label: gpt
 
-- name: Create boot partition with a size of 512MB
+- name: Label {{ install_device_name }} as msdos
+  when: not root_mounted and bootloader == "bios"
   delegate_to: "{{ target_ip }}"
+  community.general.parted:
+      device: "{{ install_device_name }}"
+      label: msdos
+
+- name: Create btrfs partition on bios
+  delegate_to: "{{ target_ip }}"
+  when: not root_mounted and bootloader == "bios"
+  community.general.parted:
+    device: "{{ install_device_name }}"
+    number: 1
+    state: present
+    part_start: 1MB
+    part_end: 100%
+    fs_type: btrfs
+
+- name: Create boot partition for uefi with a size of 512MB
+  delegate_to: "{{ target_ip }}"
+  when: not root_mounted and bootloader != "bios"
   community.general.parted:
     device: "{{ install_device_name }}"
     number: 1
@@ -34,8 +66,9 @@
     part_end: 512MB
     fs_type: fat32
 
-- name: Create btrfs partition
+- name: Create btrfs partition on uefi
   delegate_to: "{{ target_ip }}"
+  when: not root_mounted and bootloader != "bios"
   community.general.parted:
     device: "{{ install_device_name }}"
     number: 2
@@ -45,7 +78,7 @@
     fs_type: btrfs
 
 - name: Format efi boot partition
-  when: not boot_mounted
+  when: not boot_mounted and bootloader != "bios"
   delegate_to: "{{ target_ip }}"
   filesystem: 
     dev: "{{ install_device_name }}1"
@@ -56,7 +89,7 @@
   when: not root_mounted
   delegate_to: "{{ target_ip }}"
   filesystem: 
-    dev: "{{ install_device_name }}2"
+    dev: "{{ install_device_name }}{{ root_partition_number }}"
     fstype: btrfs
     force: yes
 
@@ -65,20 +98,21 @@
   delegate_to: "{{ target_ip }}"
   mount:
     path: "/mnt"
-    src: "{{ install_device_name }}2"
+    src: "{{ install_device_name }}{{ root_partition_number }}"
     state: mounted
     fstype: btrfs
     opts: compress=zstd:3,noatime
 
 - name: Create a directory if it does not exist
   delegate_to: "{{ target_ip }}"
+  when: bootloader != "bios"
   ansible.builtin.file:
     path: /mnt/efi
     state: directory
 
 - name: Mount boot partition
   delegate_to: "{{ target_ip }}"
-  when: not boot_mounted
+  when: not boot_mounted and bootloader != "bios"
   mount:
     path: "/mnt/efi"
     src: "{{ install_device_name }}1"
@@ -133,7 +167,20 @@
       ::1		localhost
       127.0.1.1	archlinux.localdomain	archlinux
 
-- name: Configure System and create refind bootloader
+- name: Set modules
+  delegate_to: "{{ target_ip }}"
+  when: mkinitcpio_modules is defined
+  copy: 
+    dest: /mnt/etc/mkinitcpio.conf
+    force: yes
+    content: |
+      MODULES=({{ mkinitcpio_modules }})
+      BINARIES=()
+      FILES=()
+      HOOKS=(base udev autodetect modconf block filesystems keyboard fsck)
+      COMPRESSION="zstd"
+
+- name: Configure System
   delegate_to: "{{ target_ip }}"
   ignore_errors: true
   command:
@@ -147,11 +194,68 @@
         hwclock --systohc
         locale-gen
         echo -e "root\nroot" | passwd
-        pacman -Sy --noconfirm openssh efibootmgr refind dhcpcd nano python sudo iwd
+        pacman -Sy --noconfirm openssh dhcpcd nano python sudo iwd
         systemctl enable sshd
         systemctl enable dhcpcd       
         mkinitcpio -P || true
+
+- name: create refind bootloader
+  delegate_to: "{{ target_ip }}"
+  ignore_errors: true
+  when: bootloader != "bios"
+  command:
+    argv:
+      - /usr/bin/arch-chroot
+      - /mnt
+      - /bin/bash
+      - -c
+      - |
+        pacman -Sy --noconfirm efibootmgr refind 
         refind-install
+
+- name: create grub bootloader
+  delegate_to: "{{ target_ip }}"
+  ignore_errors: true
+  when: bootloader == "bios"
+  command:
+    argv:
+      - /usr/bin/arch-chroot
+      - /mnt
+      - /bin/bash
+      - -c
+      - |
+        pacman -Sy --noconfirm grub
+        grub-install {{ install_device_name }}
+        grub-mkconfig -o /boot/grub/grub.cfg
+
+- name: Install cloud-init
+  delegate_to: "{{ target_ip }}"
+  ignore_errors: true
+  when: cloud_init
+  command:
+    argv:
+      - /usr/bin/arch-chroot
+      - /mnt
+      - /bin/bash
+      - -c
+      - |
+        pacman -Sy --noconfirm cloud-init cloud-guest-utils gptfdisk
+        systemctl enable cloud-init.service
+        systemctl enable cloud-final.service
+
+- name: Install firewalld
+  delegate_to: "{{ target_ip }}"
+  ignore_errors: true
+  command:
+    argv:
+      - /usr/bin/arch-chroot
+      - /mnt
+      - /bin/bash
+      - -c
+      - |
+        pacman -Sy --noconfirm firewalld nftables
+        firewall-cmd --zone=public --add-service ssh --permanent
+        systemctl enable firewalld
 
 - name: get UUID
   delegate_to: "{{ target_ip }}"
@@ -172,6 +276,7 @@
 
 - name: Add user
   delegate_to: "{{ target_ip }}"
+  when: username is defined
   command:
     argv:
       - /usr/bin/arch-chroot
@@ -185,6 +290,7 @@
         
 - name: allow admin user passwordless sudo
   delegate_to: "{{ target_ip }}"
+  when: username is defined
   ansible.builtin.lineinfile:
     path: /mnt/etc/sudoers
     regexp: '^{{ username }} ALL=(ALL:ALL) NOPASSWD:ALL'
