allow forwarding for ssh on wireguard router

--- a/roles/rclone/tasks/main.yml
+++ b/roles/rclone/tasks/main.yml
@@ -35,6 +35,7 @@
 - name: fuse allow other user
   become: yes
   ansible.builtin.lineinfile:
+    create: yes
     path: /etc/fuse.conf
     line: user_allow_other
 
