--- a/playbooks/fabric.yml
+++ b/playbooks/fabric.yml
@@ -35,5 +35,7 @@
     tags: [ promtail ]
   - role: restic
     tags: [ restic ]
+  - role: rclone
+    tags: [ rclone ]
   - role: nginx
     tags: [ nginx ]
