--- a/roles/coredns/defaults/main.yml
+++ b/roles/coredns/defaults/main.yml
@@ -4,3 +4,5 @@ coredns_system_user: "coredns"
 coredns_version: "1.8.4"
 coredns_checksum: "aede302ae591c9747040e10dc749d144df4812bd8bb141041d3d24c6204f309d"
 coredns_dns_port: 53
+zone_name: gugger.cloud
+public_ip: 20.199.182.92
